--- a/doublet_making.ipynb
+++ b/doublet_making.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,15 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.96 s, sys: 38.9 ms, total: 10 s\n",
-      "Wall time: 10 s\n"
+      "CPU times: user 6.89 s, sys: 24.6 ms, total: 6.92 s\n",
+      "Wall time: 6.93 s\n"
      ]
     },
     {
@@ -363,7 +363,7 @@
        "[40095 rows x 10 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -424,8 +424,8 @@
      "output_type": "stream",
      "text": [
       "Number of hits:  40095\n",
-      "CPU times: user 148 ms, sys: 4 ms, total: 152 ms\n",
-      "Wall time: 150 ms\n"
+      "CPU times: user 132 ms, sys: 0 ns, total: 132 ms\n",
+      "Wall time: 130 ms\n"
      ]
     },
     {
@@ -579,7 +579,7 @@
        "[40095 rows x 6 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,15 +717,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 51s, sys: 1.14 s, total: 1min 52s\n",
-      "Wall time: 6.04 s\n"
+      "CPU times: user 1min 45s, sys: 912 ms, total: 1min 46s\n",
+      "Wall time: 8.21 s\n"
      ]
     },
     {
@@ -735,7 +735,7 @@
        " array([29745, 36655, 28135, ...,     0,     0,     0]))"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
