--- a/gpu_doublet_making.ipynb
+++ b/gpu_doublet_making.ipynb
@@ -29,8 +29,7 @@
     "from numba import jit, guvectorize, prange\n",
     "from numba import int64, float32, boolean\n",
     "\n",
-    "import doublet_making_helper as cpu\n",
-    "import gpu_doublet_making_helper as gpu"
+    "import doublet_making_helper as cpu"
    ]
   },
   {
@@ -116,8 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.52 s, sys: 19.2 ms, total: 4.54 s\n",
-      "Wall time: 4.54 s\n"
+      "CPU times: user 4.27 s, sys: 25.6 ms, total: 4.29 s\n",
+      "Wall time: 4.29 s\n"
      ]
     },
     {
@@ -393,8 +392,8 @@
      "output_type": "stream",
      "text": [
       "Number of hits:  40095\n",
-      "CPU times: user 141 ms, sys: 0 ns, total: 141 ms\n",
-      "Wall time: 140 ms\n"
+      "CPU times: user 121 ms, sys: 85 µs, total: 121 ms\n",
+      "Wall time: 121 ms\n"
      ]
     },
     {
@@ -674,10 +673,9 @@
     "             isvalid = (ot_z > zmin and ot_z < zmax) && isvalid;\n",
     "\n",
     "             // Store result in out array\n",
-    "        \n",
     "             if(isvalid){\n",
-    "                 out1[N*in_idx + out_idx] = in_id;\n",
-    "                 out2[N*in_idx + out_idx] = ot_id;\n",
+    "                 out1[tid] = in_id;\n",
+    "                 out2[tid] = ot_id;\n",
     "             }\n",
     "        }\n",
     "     }\n",
@@ -726,8 +724,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.11 ms, sys: 225 µs, total: 2.34 ms\n",
-      "Wall time: 2.81 ms\n"
+      "CPU times: user 142 ms, sys: 226 µs, total: 143 ms\n",
+      "Wall time: 159 ms\n"
      ]
     }
    ],
@@ -758,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -771,207 +769,55 @@
    ],
    "source": [
     "mempool = cp.get_default_memory_pool()\n",
+    "pinned_mempool = cp.get_default_pinned_memory_pool()\n",
     "init_bytes = mempool.used_bytes()\n",
     "del gpu_hit_table\n",
     "del nhits\n",
     "del params\n",
     "del gpu_refCoords\n",
     "mempool.free_all_blocks()\n",
-    "print(\"Freed\", init_bytes - mempool.used_bytes(), \"Bytes\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Temporarily transfer outer doublet to host"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Freed 6430436352 Bytes\n",
-      "CPU times: user 1.13 s, sys: 1.14 s, total: 2.27 s\n",
-      "Wall time: 2.27 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "init_bytes = mempool.used_bytes()\n",
-    "outer_dblts = cp.asnumpy(outer_dblts)\n",
-    "mempool.free_all_blocks()\n",
+    "pinned_mempool.free_all_blocks()\n",
     "print(\"Freed\", init_bytes - mempool.used_bytes(), \"Bytes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 9.35 ms, sys: 14.6 ms, total: 24 ms\n",
-      "Wall time: 22.4 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "temp = cp.zeros(nHits**2, dtype=cp.int32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6430436352"
+       "array(302333)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mempool.used_bytes()"
+    "cp.count_nonzero(inner_dblts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array(496557)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mempool.n_free_blocks()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Used Bytes:  12861836800\n"
-     ]
-    }
-   ],
-   "source": [
-    "mempool = cp.get_default_memory_pool()\n",
-    "print(\"Used Bytes: \", mempool.used_bytes())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "962280"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gpu_hit_table.nbytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6430436100"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inner_dblts.nbytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6430436100"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outer_dblts.nbytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "964600"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mempool.used_bytes() - inner_dblts.nbytes - outer_dblts.nbytes"
+    "cp.count_nonzero(outer_dblts)"
    ]
   },
   {
